# GoITPersonalAssistance

personal_assistant/: Dockerfile  pyproject.toml
personal_assistant/src/project_willy/methods/: authorization.py  registration.py
