[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["romanovich3313 <124934750+romanovich3313@users.noreply.github.com>"]
license = "GNU License"
readme = "README.md"
packages = [{include = "personal_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
